*could: dnssd client auto connect/reconnect
*could: dnssd client has a list of expected servers

1.
r
        fix:  problem of wrong peerId passed to connector listeners when the client is an non-started service and has multiple connectors connected to a same connector
        fix:  no exception was thrown when adding too many connectors (more than 255) (see associated API impr below)
        impr: (API) added closeConnection, closeAllConnections and removeAllConnectorListeners method to the Service interface
        impr: (API) added a ConnectorLimitReached runtime exception on Service#addConnector that is thrown when too many connectors are added to a service
        impr: on the model of removing the possible trailing "-2" on the hostname, all "-" followed by a one or two digit number is removed if needed
        impr: was using 100% cpu when waiting to connectTo (or when trying to connect to connector of buggous/nasty service)

1.2.0
r2609
        fix:  (API) (WARNING) fixing bug #3271 from gforge causes programs using LocalVariableListener#isValid to compile but with changed semantic (second parameter is now the variable name, not the variable current value anymore; current value being accessible using Service#getVariableValue)
        fix:  (API) added missing variable names on Local and Remote VariableListeners
        fix:  problem with avahi and big txt records (services with many variables)
        fix:  problem with jmdns and big txt records (services with many variables)
        fix:  can now safely listen to one variable multiple times with proper notification (was sending multiple notifications to each listener)
        fix:  removed interferences between variable modifications and variable consultation causing multiple notifications of some variable modifications
        fix:  problem with readdition of remote variable change listeners
        fix:  peerId was not shown in variables given by ServiceProxy#getVariables